fix layout issue

--- a/public/grayscale/css/grayscale.css
+++ b/public/grayscale/css/grayscale.css
@@ -14,7 +14,7 @@ body {
     height: 100%;
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #000;
-    background-color: #F4EFEA;
+    background-color: #fff;
 }
 
 html {
@@ -246,7 +246,7 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 100px 0;
     text-align: center;
     color: #fff;
